Small CSS bug fixed, link to PVE guide broken on homepage.

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ h1 {
     font-family: "Kings and Pirates", sans-serif;
     font-style: italic;
     font-size: 3rem;
-    color: var(--secondaryaccenttwo);
+    color: var(--white);
     text-align: center;
     margin-bottom: 2rem;
     text-shadow: 0.2rem 0.2rem var(--primaryaccenttwo);
